# rust

./: .gitignore  .justfile  Cargo.toml  README.md  gsoc24.md  rustc-ice-2024-06-30T12_12_30-3396202.txt  wasm-proc-macros-draft.md
compiler/rustc_expand/: Cargo.toml
compiler/rustc_expand/src/: base.rs  lib.rs  proc_macro.rs  wpm.rs
compiler/rustc_expand/src/wpm/: client.rs  runtime.rs  server.rs
compiler/rustc_metadata/: messages.ftl
compiler/rustc_metadata/src/: creader.rs  errors.rs  locator.rs
compiler/rustc_metadata/src/rmeta/: decoder.rs
compiler/rustc_serialize/src/: opaque.rs
compiler/rustc_session/src/: cstore.rs
compiler/wpm_proc_macro/: Cargo.toml
compiler/wpm_proc_macro/src/: lib.rs
compiler/wpm_proc_macro/src/bridge/: client.rs  fxhash.rs  mod.rs  server.rs
pmacro1/src/: lib.rs
src/tools/rust-analyzer/crates/proc-macro-srv/src/: proc_macros.rs
use-wasm-proc-macro/: .gitignore  build-and-run  main.rs
wasm-proc-macro/: Cargo.toml
wasm-proc-macro-loader/: Cargo.toml
wasm-proc-macro-loader/src/: lib.rs
wasm-proc-macro/src/: lib.rs
