[package]
name = "wpm_proc_macro"
version = "0.0.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = "1.0.203"
# std = { path = "../std" }
# Workaround: when documenting this crate rustdoc will try to load crate named
# `core` when resolving doc links. Without this line a different `core` will be
# loaded from sysroot causing duplicate lang items and other similar errors.
# core = { path = "../core" }
